# LeetCodeTasks

./: CMakeLists.txt  CMakePresets.json  Offer_test.c  README.md  Yandex_test.c  leetcode_1_to_10.c  main.c  tempCodeRunnerFile.c
